fix: accessibility contrast on blog dates

--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,6 @@ article p {
 article time {
     display: inline-block;
     vertical-align: top;
-    color: #a0a0a0;
     width:50%;
 }
 
